src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>SBQQ__RequiredByAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent Asset. If populated, this Asset is a child in a bundle.</inlineHelpText>
        <label>Required By Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Required By Asset)</relationshipLabel>
        <relationshipName>ChildAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredById__c</fullName>
        <description>The Id of the parent record that requires this record.</description>
        <inlineHelpText>The Id of the parent record that requires this record.</inlineHelpText>
        <label>Required By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredByProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Product of this Asset.</description>
        <inlineHelpText>Parent Product of this Asset.</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Child Assets</relationshipLabel>
        <relationshipName>ChildAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBySubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent Subscription. If populated, this Asset is a child in a bundle.</inlineHelpText>
        <label>Required By Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Assets (Required By Subscription)</relationshipLabel>
        <relationshipName>ChildAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RevisedAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revised Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Revised Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RootAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ultimate bundle parent of this Asset</description>
        <inlineHelpText>Ultimate bundle parent of this Asset</inlineHelpText>
        <label>Root Asset (CPQ)</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (RootAsset)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentLabel__c</fullName>
        <description>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</description>
        <inlineHelpText>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</inlineHelpText>
        <label>Segment Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionEndDate__c</fullName>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Assets (Quote Line)</relationshipLabel>
        <relationshipName>Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionStartDate__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscribed Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term. This is useful when you want to show a breakdown of payments in separate groups, for different terms, yet you want to discount reflected for the entire duration of the subscription. Leave Term Discount Level blank if you want discount schedules applied based on the term of each line item.</description>
        <inlineHelpText>Schedule for discounts based on subscription term. Setting this to &quot;Group&quot; applies the discount rate for the group term, while setting it to &quot;Quote&quot; applies the discount rate for the entire quote term, regardless of the different terms in your groups.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Assets (Term Discouned)</relationshipLabel>
        <relationshipName>TermDiscountedAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnitCost__c</fullName>
        <description>Unit Cost for this Asset.</description>
        <inlineHelpText>Unit Cost for this Asset.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__VirtualAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Virtual Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Virtual Asset)</relationshipLabel>
        <relationshipName>VirtualAsset</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Child_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.PARENT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>CS_Not_in_Use__c</columns>
        <columns>CS_Hide_On_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Child Asset</value>
        </filters>
        <label>All Child Assets</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Enablement_Team</group>
            <group>GW_Support_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Certification</fullName>
        <columns>CS_Product_Family__c</columns>
        <columns>CS_Version__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>CS_View_Contacts__c</columns>
        <columns>CS_View_Download__c</columns>
        <columns>CS_View_Documentation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>Certification</value>
        </filters>
        <label>Certification</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Licensed_Products</fullName>
        <columns>CS_Product_Family__c</columns>
        <columns>CS_Version__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>CS_Customer_Name__c</columns>
        <columns>CS_View_Cases__c</columns>
        <columns>CS_View_Contacts__c</columns>
        <columns>CS_View_Download__c</columns>
        <columns>CS_View_Documentation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>Implementation,Production</value>
        </filters>
        <label>MyProducts</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Child_Asset</fullName>
        <active>true</active>
        <description>Child Asset</description>
        <label>Child Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent_Asset</fullName>
        <active>true</active>
        <description>Parent Asset</description>
        <label>Parent Asset</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Asset_StatusCheck</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
Account.RecordType.Name=&apos;Partner&apos;,
OR(Text(Status)=&apos;Implementation&apos;,
   Text(Status)=&apos;Production&apos;,
   Text(Status)=&apos;Prospect&apos;)

)</errorConditionFormula>
        <errorMessage>Partner Asset Status should be  Certification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CS_Prevent_Status_Downgrade</fullName>
        <active>true</active>
        <description>Validation Rule to Prevent Asset Status changed from Production to Other Values</description>
        <errorConditionFormula>AND
(
NOT($Setup.CS_ByPass__c.CS_Disable_ValidationRule__c), 
ISCHANGED( Status ), 
ISPICKVAL(PRIORVALUE( Status ), &quot;Production&quot;), 
ISPICKVAL( Status, &quot;Implementation&quot;) 
)</errorConditionFormula>
        <errorMessage>Asset Status can not be changed  after its set to Production</errorMessage>
    </validationRules>
</CustomObject>